Wed Sep 18 12:37:46 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kdc.conf.proto: remove max_life spec, use default

Mon Jul 15 17:11:35 1996  Marc Horowitz  <marc@mit.edu>

	* krb5.conf.proto: specify a default_keytab_name in /krb5

Fri Jul 12 14:46:17 1996  Marc Horowitz  <marc@mit.edu>

	* kdc.conf.proto: put the stash file in /krb5, so that the root
 	dir does not need to be writeable.  also, the admin system
 	requires a reference in the conf file to admin_keytab