@@ -1,3 +1,7 @@
+Fri Sep 20 16:54:44 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* krb5.conf.proto: change logging to /krb5/syslog
+
 Wed Sep 18 12:37:46 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* kdc.conf.proto: remove max_life spec, use default
